python/examples/functions/named_and_positional_bad.out
  File "examples/functions/named_and_positional_bad.py", line 2
    def f(a=2, b):
          ^
SyntaxError: non-default argument follows default argument
